--- a/client/src/styles/app.scss
+++ b/client/src/styles/app.scss
@@ -353,7 +353,7 @@ header {
   position: relative;
   margin: 0;
   left: 1px;
-  color: #b9c8e8;
+  color: #ff0000;
   font-family: initial;
   //font-style: italic;
   font-size: 13px;
@@ -553,16 +553,19 @@ button[type="submit"] {
 }
 
 // close 
-span{
+.close{
   position: absolute;
   font-size: 1.5em;
-  color: #fff;
   right: 10px;
+  font-weight: bold;
+  bottom:2.3em;
   z-index: 1;
   &:hover {
       cursor: pointer;
   }
 }
+
+
 
 
 //dropdown
@@ -671,4 +674,30 @@ span{
         width: 70%;
     }
     }
+}
+
+#modal_error_display{
+  display: block;
+  position: fixed;
+  z-index: 1004;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.356);
+}
+
+#serverMessage{
+  position: fixed;
+  display: block;
+  top: 50%;
+  left: 50%;
+  color: #2e4644;
+  transform: translate(-50%, -50%);
+  background: #fff;
+  padding: 2em;
+  z-index: 1;
+  width: 80%;
+  font-size: 1em;
 }
